docs/api/qiskit/0.24/qiskit.providers.ibmq.experiment.AnalysisResult.mdx
---
title: AnalysisResult
description: API reference for qiskit.providers.ibmq.experiment.AnalysisResult
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.ibmq.experiment.AnalysisResult
---

<span id="qiskit-providers-ibmq-experiment-analysisresult" />

# qiskit.providers.ibmq.experiment.AnalysisResult

<Class id="qiskit.providers.ibmq.experiment.AnalysisResult" isDedicatedPage={true} github="https://github.com/qiskit/qiskit-ibmq-provider/tree/stable/0.12/qiskit/providers/ibmq/experiment/analysis_result.py" signature="AnalysisResult(experiment_uuid, device_components, fit, result_type, chisq=None, quality=<ResultQuality.NO_INFORMATION: 'No Information'>, tags=None, result_uuid=None, backend_name=None)">
  Class representing an analysis result for an experiment.

  AnalysisResult constructor.

  **Parameters**

  *   **experiment\_uuid** (`str`) – Unique identifier of the experiment.
  *   **device\_components** (`List`\[`str`]) – Device component types.
  *   **fit** (`Union`\[`Fit`, `Dict`\[`str`, `float`]]) – Fit value. This can be an instance of the `Fit` class, or a dictionary with the keys `value` and optionally `variance`.
  *   **result\_type** (`str`) – Result type.
  *   **chisq** (`Optional`\[`float`]) – chi^2 decimal value of the fit.
  *   **quality** (`Union`\[`ResultQuality`, `str`]) – Quality of the measurement value.
  *   **tags** (`Optional`\[`List`\[`str`]]) – Tags for this result.
  *   **result\_uuid** (`Optional`\[`str`]) – Unique identifier for the result.
  *   **backend\_name** (`Optional`\[`str`]) – Name of the backend on which the experiment was run.

  **Raises**

  **IBMQInputValueError** – If an input argument is invalid.

  ### \_\_init\_\_

  <Function id="qiskit.providers.ibmq.experiment.AnalysisResult.__init__" name="__init__" signature="__init__(experiment_uuid, device_components, fit, result_type, chisq=None, quality=<ResultQuality.NO_INFORMATION: 'No Information'>, tags=None, result_uuid=None, backend_name=None)">
    AnalysisResult constructor.

    **Parameters**

    *   **experiment\_uuid** (`str`) – Unique identifier of the experiment.
    *   **device\_components** (`List`\[`str`]) – Device component types.
    *   **fit** (`Union`\[`Fit`, `Dict`\[`str`, `float`]]) – Fit value. This can be an instance of the `Fit` class, or a dictionary with the keys `value` and optionally `variance`.
    *   **result\_type** (`str`) – Result type.
    *   **chisq** (`Optional`\[`float`]) – chi^2 decimal value of the fit.
    *   **quality** (`Union`\[`ResultQuality`, `str`]) – Quality of the measurement value.
    *   **tags** (`Optional`\[`List`\[`str`]]) – Tags for this result.
    *   **result\_uuid** (`Optional`\[`str`]) – Unique identifier for the result.
    *   **backend\_name** (`Optional`\[`str`]) – Name of the backend on which the experiment was run.

    **Raises**

    **IBMQInputValueError** – If an input argument is invalid.
  </Function>

  ## Methods

  |                                                                                                                                                                                               |                                                           |
  | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------- |
  | [`__init__`](#qiskit.providers.ibmq.experiment.AnalysisResult.__init__ "qiskit.providers.ibmq.experiment.AnalysisResult.__init__")(experiment\_uuid, device\_components, …)                   | AnalysisResult constructor.                               |
  | [`from_remote_data`](#qiskit.providers.ibmq.experiment.AnalysisResult.from_remote_data "qiskit.providers.ibmq.experiment.AnalysisResult.from_remote_data")(remote\_data)                      | Create an instance of this class from remote data.        |
  | [`update_from_remote_data`](#qiskit.providers.ibmq.experiment.AnalysisResult.update_from_remote_data "qiskit.providers.ibmq.experiment.AnalysisResult.update_from_remote_data")(remote\_data) | Update the attributes of this instance using remote data. |

  ## Attributes

  |                                                                                                                                                               |                                                            |
  | ------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------- |
  | [`creation_datetime`](#qiskit.providers.ibmq.experiment.AnalysisResult.creation_datetime "qiskit.providers.ibmq.experiment.AnalysisResult.creation_datetime") | Return the timestamp when the experiment was created.      |
  | [`fit`](#qiskit.providers.ibmq.experiment.AnalysisResult.fit "qiskit.providers.ibmq.experiment.AnalysisResult.fit")                                           | Return the fit value for the experiment.                   |
  | [`quality`](#qiskit.providers.ibmq.experiment.AnalysisResult.quality "qiskit.providers.ibmq.experiment.AnalysisResult.quality")                               | Return the analysis result quality.                        |
  | [`updated_datetime`](#qiskit.providers.ibmq.experiment.AnalysisResult.updated_datetime "qiskit.providers.ibmq.experiment.AnalysisResult.updated_datetime")    | Return the timestamp when the experiment was last updated. |
  | [`uuid`](#qiskit.providers.ibmq.experiment.AnalysisResult.uuid "qiskit.providers.ibmq.experiment.AnalysisResult.uuid")                                        | Return UUID of this analysis result.                       |

  ### creation\_datetime

  <Function id="qiskit.providers.ibmq.experiment.AnalysisResult.creation_datetime" name="creation_datetime" signature="property creation_datetime">
    Return the timestamp when the experiment was created.

    **Return type**

    `datetime`
  </Function>

  ### fit

  <Function id="qiskit.providers.ibmq.experiment.AnalysisResult.fit" name="fit" signature="property fit">
    Return the fit value for the experiment.

    **Return type**

    `Fit`
  </Function>

  ### from\_remote\_data

  <Function id="qiskit.providers.ibmq.experiment.AnalysisResult.from_remote_data" name="from_remote_data" signature="classmethod from_remote_data(remote_data)">
    Create an instance of this class from remote data.

    **Parameters**

    **remote\_data** (`Dict`) – Remote data to use.

    **Return type**

    `AnalysisResult`

    **Returns**

    An instance of this class.
  </Function>

  ### quality

  <Function id="qiskit.providers.ibmq.experiment.AnalysisResult.quality" name="quality" signature="property quality">
    Return the analysis result quality.

    **Return type**

    `ResultQuality`
  </Function>

  ### update\_from\_remote\_data

  <Function id="qiskit.providers.ibmq.experiment.AnalysisResult.update_from_remote_data" name="update_from_remote_data" signature="update_from_remote_data(remote_data)">
    Update the attributes of this instance using remote data.

    **Parameters**

    **remote\_data** (`Dict`) – Remote data used to update this instance.

    **Return type**

    `None`
  </Function>

  ### updated\_datetime

  <Function id="qiskit.providers.ibmq.experiment.AnalysisResult.updated_datetime" name="updated_datetime" signature="property updated_datetime">
    Return the timestamp when the experiment was last updated.

    **Return type**

    `datetime`
  </Function>

  ### uuid

  <Function id="qiskit.providers.ibmq.experiment.AnalysisResult.uuid" name="uuid" signature="property uuid">
    Return UUID of this analysis result.

    **Return type**

    `str`
  </Function>
</Class>

